@@ -44,8 +44,10 @@ def main(argv = None):
 		      help="make changes to disk contents persistent", action="store_true")
     parser.add_option("--boot-from",
 		      help="boot from MEDIA (floppy/cdrom)", metavar="MEDIA")
-    parser.add_option("--structured-log", metavar="FILE",
-		      help="log console traffic in a structured format in FILE")
+    parser.add_option("--structured-log", action="store_true",
+		      help="log console traffic in a structured format, to stdout")
+    parser.add_option("--structured-log-file", metavar="FILE",
+		      help="log console traffic in a structured format, to FILE")
     parser.add_option("--no-install", action="store_true",
 		      help="in boot/test/interact mode, assume system is already installed")
     parser.add_option("--version", action="store_true",
@@ -91,6 +93,7 @@ def main(argv = None):
 	persist = options.persist,
 	boot_from = options.boot_from,
 	structured_log = options.structured_log,
+	structured_log_file = options.structured_log_file,
 	no_install = options.no_install
 	)
 
