@@ -1,5 +1,6 @@
-The --structured-log option now takes the name of a log file as an
-argument, and the structured logging is now in addition to, not
+New command line option --structured-log-file.  This is like
+--structured-log but takes the name of a log file as an
+argument, and the structured logging is in addition to, not
 instead of, the traditional logging to stdout.
 
 Increase installation timeout from 1 hour to 3 hours so that
